<resources>
    <string name="app_name">Jeewan</string>
    <string name="terms_of_service_privacy_policy">Terms of Service,Privacy Policy</string>
    <string name="by_continuing_you_agree_to_our">By Continuing,you agree to our</string>
    <string name="connect_with_google">Connect With GOOGLE</string>
    <string name="connect_with_email">Connect With Email</string>
    <string name="or">OR</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number_and_we_will_send">Enter your phone number and we will send</string>
    <string name="an_otp_to_continue">an OTP to Continue</string>
    <string name="jeewan">Jeewan</string>
    <string name="_91">+91</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="made_in_india_with_9829">Made in India, with ♥</string>
    <string name="mobile_no">Mobile no.</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign Up/Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="enter_rtype">Enter request type</string>
    <string name="enter_bgroup">Enter required blood group</string>
    <string name="enter_bamount">Enter required amount of blood</string>
    <string name="search_criteria">Enter search criteria</string>
    <string-array name="request_type">
        <item name="plasma_request">Request for Plasma</item>
        <item name="blood_request">Request for Blood</item>
    </string-array>
    <string-array name="blood_group">
        <item name="A+">A+</item>
        <item name="A-">A-</item>'
        <item name="B+">B+</item>
        <item name="B-">B-</item>
        <item name="AB+">AB+</item>
        <item name="AB-">AB-</item>
        <item name="O+">O+</item>
        <item name="O-">O-</item>
    </string-array>
    <string-array name="blood_amount">
        <item name="1 bag">1 bag</item>
        <item name="2 bag">2 bag</item>'
        <item name="3 bag">3 bag</item>
        <item name="4 bag">4 bag</item>
        <item name="5 bag">5 bag</item>
    </string-array>
    <string-array name="search_tags">
        <item name="Search by City">Search by City</item>
        <item name="Search by Blood group">Search by Blood group</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Titles-->
    <string name="first_slide_title">Why Plasma Donation?</string>
    <string name="second_slide_title">How does this work?</string>
    <string name="third_slide_title">Am I eligible to donate?</string>
    <!--Descriptions-->
    <string name="first_slide_desc">Plasma is a vital source material for a number of plasma-derived medications that treat and prevent life-threatening diseases, illnesses and conditions. Plasma cannot be created in a laboratory or synthetically produced. Compassionate donors donating their plasma make these medications possible.</string>
    <string name="second_slide_desc"><b>-</b>Register Yourself as the Jeewan App \n<b>-</b> If you need plasma - Create a Request\n <b>-</b>If you wish to donate - Get in touch with someone who has requested. </string>
    <string name="third_slide_desc"><b>-</b>You are at least <b>17 years</b> old and weigh <b>110 lbs/50 kgs</b>. Additional weight requirements apply for donors age 18 or younger.\n <b>-</b>Have a prior, <b>verified</b> diagnosis of COVID-19,
        but are now symptom free and fully recovered from COVID-19 \n <b>-</b>.In <b>good</b> health,You generally feel well, even if you are being treated for a chronic condition</string>
    <!--Buttons -->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="textview">TextView</string>
    <string name="we_value_your_feedback">We Value your Feedback</string>
    <string name="what_can_we_do_to_improve">What can we do to improve?</string>
</resources>
